Fixes to run in mac

--- a/ckan/Dockerfile.dev
+++ b/ckan/Dockerfile.dev
@@ -35,3 +35,5 @@ RUN for d in ${APP_DIR}/patches/*; do \
             done ; \
         fi ; \
     done
+
+COPY start_ckan_development.sh ${APP_DIR}/start_ckan_development.sh
