--- a/postgresql/Dockerfile
+++ b/postgresql/Dockerfile
@@ -1,7 +1,7 @@
 FROM postgres:12-alpine
 
 # Allow connections; we don't map out any ports so only linked docker containers can connect
-RUN echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf
+#RUN echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf
 
 # Customize default user/pass/db
 ENV POSTGRES_DB ckan
