--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ TEST_CKAN_DATASTORE_READ_URL=postgresql://datastore_ro:datastore@db/datastore_te
 
 # CKAN core
 CKAN_SITE_ID=default
-CKAN_SITE_URL=http://ckan:5000
+CKAN_SITE_URL=http://ckan-dev:5000
 CKAN_PORT=5000
 CKAN_SYSADMIN_NAME=ckan_admin
 CKAN_SYSADMIN_PASSWORD=test1234
@@ -41,9 +41,9 @@ TEST_CKAN_REDIS_URL=redis://redis:6379/1
 # Datapusher
 DATAPUSHER_VERSION=0.0.17
 CKAN_DATAPUSHER_URL=http://datapusher:8800
-CKAN__DATAPUSHER__CALLBACK_URL_BASE=http://ckan:5000
+CKAN__DATAPUSHER__CALLBACK_URL_BASE=http://ckan-dev:5000
 DATAPUSHER_REWRITE_RESOURCES=True
-DATAPUSHER_REWRITE_URL=http://ckan:5000  
+DATAPUSHER_REWRITE_URL=http://ckan-dev:5000  
 
 # Extensions
 CKAN__PLUGINS="envvars image_view text_view recline_view datastore datapusher demo"
